Update sonarqube detections